# malachite

./: .gitignore  .typos.toml  ARCHITECTURE.md  BREAKING_CHANGES.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_CODE.md  LICENSE  METRICS.md  README.md  RELEASE_NOTES.md  SECURITY.md  cliff.toml  codecov.yml  typos.toml
Code/: Cargo.toml  QUESTIONS.md  TODO.md
Code/.cargo/: config.toml
Code/common/: Cargo.toml
Code/common/src/: consensus.rs  context.rs  height.rs  lib.rs  proposal.rs  round.rs  signed_vote.rs  signing.rs  timeout.rs  validator_set.rs  value.rs  vote.rs
Code/consensus/: Cargo.toml
Code/consensus/src/: executor.rs  lib.rs  message.rs
Code/driver/: Cargo.toml
Code/driver/src/: client.rs  driver.rs  env.rs  error.rs  event.rs  input.rs  lib.rs  message.rs  mux.rs  output.rs  proposals.rs  proposer.rs  util.rs
Code/itf/: Cargo.toml
Code/itf/src/: consensus.rs  deserializers.rs  lib.rs  types.rs  utils.rs  votekeeper.rs
Code/itf/tests/: consensus.rs  votekeeper.rs
Code/itf/tests/consensus/: utils.rs
Code/itf/tests/votekeeper/: runner.rs  utils.rs
Code/round/: Cargo.toml
Code/round-sm/: Cargo.toml  rustfmt.toml
Code/round-sm/src/: lib.rs  state_machine.rs
Code/round/src/: events.rs  input.rs  lib.rs  message.rs  output.rs  state.rs  state_machine.rs  transition.rs
Code/test/: Cargo.toml
Code/test/src/: client.rs  consensus.rs  context.rs  env.rs  height.rs  lib.rs  proposal.rs  signing.rs  utils.rs  validator_set.rs  value.rs  vote.rs
Code/test/tests/: consensus_executor.rs  driver.rs  driver_extra.rs  round.rs  round_votes.rs  vote_count.rs  vote_keeper.rs
Code/vote/: Cargo.toml
Code/vote/src/: count.rs  keeper.rs  lib.rs  round_votes.rs  round_weights.rs  value_weights.rs
code/: .dockerignore  .gitignore  Cargo.toml  Makefile  PLAN.md  PLAN_RAW.md  cargo-maelstrom.toml  clippy.toml  config.toml
code/.cargo/: config.toml
code/.config/: nextest.toml
code/actors/: Cargo.toml
code/actors/src/: cal.rs  consensus.rs  gossip.rs  gossip_consensus.rs  gossip_mempool.rs  host.rs  lib.rs  mempool.rs  node.rs  prelude.rs  proposal_builder.rs  timers.rs
code/actors/src/consensus/: network.rs
code/actors/src/util/: make_actor.rs  mod.rs  part_store.rs  value_builder.rs
code/actors/tests/: actor_gossip_n3f0.rs  actor_gossip_n3f1.rs  util.rs
code/cli/: Cargo.toml
code/cli/src/: args.rs  example.rs  main.rs  priv_key.rs
code/cli/src/cmd/: init.rs  mod.rs  start.rs  testnet.rs
code/common/: Cargo.toml
code/common/src/: block_part.rs  context.rs  height.rs  lib.rs  proposal.rs  round.rs  signed_proposal.rs  signed_vote.rs  signing.rs  timeout.rs  transaction.rs  validator_set.rs  value.rs  vote.rs
code/crates/actors/: Cargo.toml
code/crates/actors/src/: block_sync.rs  consensus.rs  gossip_consensus.rs  gossip_mempool.rs  host.rs  lib.rs  mempool.rs  node.rs  sync.rs  timers.rs  value_builder.rs  wal.rs
code/crates/actors/tests/: actor_gossip_n3f1.rs  util.rs
code/crates/app/: Cargo.toml
code/crates/app-channel/: Cargo.toml
code/crates/app-channel/src/: builder.rs  channel.rs  connector.rs  lib.rs  msgs.rs  run.rs  spawn.rs  test.rs  types.rs
code/crates/app/src/: builder.rs  config.rs  lib.rs  node.rs  part_store.rs  spawn.rs  types.rs
code/crates/blocksync/: Cargo.toml
code/crates/blocksync/src/: behaviour.rs  co.rs  (+6 more)
code/crates/cli/: Cargo.toml
code/crates/codec/: Cargo.toml
code/crates/common/: Cargo.toml  build.rs
code/crates/config/: Cargo.toml
code/crates/consensus/: Cargo.toml
code/crates/core-consensus/: Cargo.toml  README.md
code/crates/core-driver/: Cargo.toml
code/crates/core-state-machine/: Cargo.toml
code/crates/core-types/: Cargo.toml
code/crates/core-votekeeper/: Cargo.toml
code/crates/coroutine/: Cargo.toml
code/crates/crypto/: Cargo.toml
code/crates/discovery/: Cargo.toml  README.md
code/crates/driver/: Cargo.toml
code/crates/engine/: Cargo.toml
code/crates/gossip-consensus/: Cargo.toml
code/crates/gossip-mempool/: Cargo.toml  build.rs
code/crates/itf/: Cargo.toml
code/crates/metrics/: Cargo.toml
code/crates/network/: Cargo.toml
code/crates/node/: Cargo.toml
code/crates/peer/: Cargo.toml
code/crates/proto/: Cargo.toml  build.rs
code/crates/round/: Cargo.toml
code/crates/signing/: Cargo.toml
code/crates/signing-ecdsa/: Cargo.toml
code/crates/signing-ed25519/: Cargo.toml
code/crates/starknet/: README.md
code/crates/starknet-host/: Cargo.toml  build.rs
code/crates/sync/: Cargo.toml
code/crates/test/: Cargo.toml  build.rs
code/crates/test-app/: Cargo.toml
code/crates/vote/: Cargo.toml
code/crates/wal/: Cargo.toml  sync.sh
code/driver/: Cargo.toml
code/driver/src/: driver.rs  error.rs  input.rs  lib.rs  mux.rs  output.rs  proposer.rs  util.rs
code/examples/channel/: Cargo.toml  README.md  config.toml  spawn.bash
code/gossip/: Cargo.toml
code/gossip-consensus/: Cargo.toml
code/gossip-consensus/src/: behaviour.rs  lib.rs
code/gossip-mempool/: Cargo.toml
code/gossip-mempool/src/: lib.rs
code/gossip/src/: behaviour.rs  handle.rs  lib.rs
code/itf/: Cargo.toml
code/itf/src/: types.rs  utils.rs
code/itf/tests/: consensus.rs  votekeeper.rs
code/network/: Cargo.toml
code/network-mempool/: Cargo.toml
code/network-mempool/src/: msg.rs  peer_id.rs
code/network/src/: lib.rs  msg.rs  peer_id.rs
code/node/: Cargo.toml
code/node/src/: config.rs  lib.rs  proposer.rs  value_builder.rs
code/proto/: Cargo.toml
code/proto/src/: impls.rs  lib.rs  malachite.proto
code/round/: Cargo.toml
code/round/src/: lib.rs  output.rs  state.rs  state_machine.rs  transition.rs
code/scripts/: Makefile  README.md  spawn-tmux.bash  spawn.bash  spawn.fish
code/test/: Cargo.toml
code/test/configs/: README.md
code/test/src/: address.rs  context.rs  height.rs  lib.rs  serialization.rs  signing.rs  utils.rs  validator_set.rs  value.rs  vote.rs
code/test/tests/: driver.rs  driver_extra.rs  round.rs
code/vote/: Cargo.toml
code/vote/src/: count.rs  keeper.rs  lib.rs  round_votes.rs  round_weights.rs  value_weights.rs
(+863 files in other folders)
