[workspace]
resolver = "2"

members = [
  "common",
  "driver",
  "round",
  "vote",
  "test",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
repository   = "https://github.com/informalsystems/malachite"
license      = "Apache-2.0"
publish      = false

[workspace.dependencies]
ed25519-consensus = "2.1.0"
rand              = { version = "0.8.5", features = ["std_rng"] }
secrecy           = "0.8.0"
sha2              = "0.10.8"
signature         = "2.1.0"
