[workspace]
resolver = "2"

members = [
  "crates/actors",
  "crates/app-channel",
  "crates/blocksync",
  "crates/cli",
  "crates/codec",
  "crates/common",
  "crates/config",
  "crates/consensus",
  "crates/driver",
  "crates/gossip-consensus",
  "crates/gossip-consensus/test",
  "crates/gossip-mempool",
  "crates/metrics",
  "crates/node",
  "crates/proto",
  "crates/round",
  "crates/vote",
  "crates/wal",

  # Ed25519
  "crates/signing-ed25519",

  # Test
  "crates/test",
  "crates/test/mbt",
  "crates/driver/test-utils",

  # Starknet
  "crates/starknet/*",
  "crates/starknet/*",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
repository   = "https://github.com/informalsystems/malachite"
license      = "Apache-2.0"
publish      = false
rust-version = "1.82"

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
overflow-checks = true

[profile.profiling]
inherits = "release"
debug = true

[workspace.lints.rust]
# None for now

[workspace.dependencies]
malachite-actors           = { version = "0.1.0", path = "crates/actors" }
malachite-app-channel      = { version = "0.1.0", path = "crates/app-channel" }
malachite-blocksync        = { version = "0.1.0", path = "crates/blocksync" }
malachite-codec            = { version = "0.1.0", path = "crates/codec" }
malachite-cli              = { version = "0.1.0", path = "crates/cli" }
malachite-common           = { version = "0.1.0", path = "crates/common" }
malachite-config           = { version = "0.1.0", path = "crates/config" }
malachite-consensus        = { version = "0.1.0", path = "crates/consensus", features = ["debug"] }
malachite-discovery        = { version = "0.1.0", path = "crates/discovery" }
malachite-driver           = { version = "0.1.0", path = "crates/driver" }
malachite-gossip-consensus = { version = "0.1.0", path = "crates/gossip-consensus" }
malachite-gossip-mempool   = { version = "0.1.0", path = "crates/gossip-mempool" }
malachite-metrics          = { version = "0.1.0", path = "crates/metrics" }
malachite-node             = { version = "0.1.0", path = "crates/node" }
malachite-proto            = { version = "0.1.0", path = "crates/proto" }
malachite-round            = { version = "0.1.0", path = "crates/round" }
malachite-vote             = { version = "0.1.0", path = "crates/vote" }
malachite-signing-ed25519  = { version = "0.1.0", path = "crates/signing-ed25519" }
malachite-wal              = { version = "0.1.0", path = "crates/wal" }

# Test
malachite-test              = { version = "0.1.0", path = "crates/test" }
malachite-test-mbt          = { version = "0.1.0", path = "crates/test/mbt" }
malachite-driver-test-utils = { version = "0.1.0", path = "crates/driver/test-utils" }

# Starknet
malachite-starknet-host      = { version = "0.1.0", path = "crates/starknet/host" }
malachite-starknet-app       = { version = "0.1.0", path = "crates/starknet/app" }
malachite-starknet-p2p-proto = { version = "0.1.0", path = "crates/starknet/p2p-proto" }
malachite-starknet-p2p-types = { version = "0.1.0", path = "crates/starknet/p2p-types" }

# Starknet
starknet-core   = "0.11.1"
starknet-crypto = "0.7.3"

advisory-lock      = "0.3.0"
async-recursion    = "1.1"
async-trait        = "0.1.83"
axum               = "0.7"
base64             = "0.22.0"
bytes              = { version = "1", default-features = false }
byteorder          = "1.5"
bytesize           = "1.3"
clap               = "4.5"
color-eyre         = "0.6"
config             = { version = "0.14", features = ["toml"], default-features = false }
crc32fast          = "1.4.0"
criterion          = "0.5.1"
dashmap            = "6.1.0"
derive-where       = "1.2.7"
directories        = "5.0.1"
displaydoc         = { version = "0.2", default-features = false }
ed25519-consensus  = "2.1.0"
either             = "1"
eyre               = "0.6"
futures            = "0.3"
genawaiter         = { version = "0.99.1", default-features = false }
glob               = "0.3.0"
hex                = { version = "0.4.3", features = ["serde"] }
humantime          = "2.1.0"
humantime-serde    = "1.1.1"
itertools          = "0.13"
itf                = "0.2.3"
libp2p             = { version = "0.54.1", features = ["macros", "identify", "tokio", "ed25519", "ecdsa", "tcp", "quic", "noise", "yamux", "gossipsub", "dns", "ping", "metrics", "request-response", "cbor", "serde"] }
libp2p-identity    = "0.2.10"
libp2p-broadcast   = { version = "0.1.1", package = "libp2p-scatter" }
multiaddr          = "0.18.2"
nix                = { version = "0.29.0", features = ["signal"] }
num-bigint         = "0.4.4"
num-traits         = "0.2.17"
pretty_assertions  = "1.4"
prometheus-client  = "0.22"
prost              = "0.13"
prost-build        = "0.13"
prost-types        = "0.13"
ractor             = "0.13.2"
rand               = { version = "0.8.5", features = ["std_rng"] }
rand_chacha        = "0.3.1"
redb               = "2.2.0"
seahash            = "4.1"
serde              = "1.0"
serde_json         = "1.0"
serde_with         = "3.9"
sha3               = "0.10"
signature          = "2.2.0"
tempfile           = "3.13.0"
testdir            = "0.9.1"
thiserror          = { version = "2.0", default-features = false }
tikv-jemallocator  = "0.6.0"
time               = "0.3"
tokio              = "1.41.1"
tokio-stream       = "0.1"
toml               = "0.8.19"
tracing            = "0.1.41"
tracing-appender   = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
