[package]
name        = "malachite-consensus"
description = "Malachite consensus engine"

version.workspace      = true
edition.workspace      = true
repository.workspace   = true
license.workspace      = true
publish.workspace      = true

[dependencies]
malachite-common = { version = "0.1.0", path = "../common" }
malachite-round  = { version = "0.1.0", path = "../round" }
malachite-vote   = { version = "0.1.0", path = "../vote" }

secrecy.workspace = true
