[package]
name        = "malachite-test"
description = "Testing framework for the Malachite consensus engine"
publish     = false

version.workspace      = true
edition.workspace      = true
repository.workspace   = true
license.workspace      = true

[dependencies]
malachite-common = { version = "0.1.0", path = "../common" }
malachite-driver = { version = "0.1.0", path = "../driver" }
malachite-round  = { version = "0.1.0", path = "../round" }
malachite-vote   = { version = "0.1.0", path = "../vote" }

futures = { workspace = true, features = ["executor"] }

async-trait.workspace       = true
ed25519-consensus.workspace = true
signature.workspace         = true
rand.workspace              = true
sha2.workspace              = true
secrecy.workspace           = true
