[package]
name                 = "malachite-actors"
version.workspace    = true
edition.workspace    = true
repository.workspace = true
license.workspace    = true
publish.workspace    = true

[lints]
workspace = true

[dependencies]
malachite-common.workspace  = true
malachite-driver.workspace  = true
malachite-gossip.workspace  = true
malachite-network.workspace = true
malachite-node.workspace    = true
malachite-proto.workspace   = true
malachite-test.workspace    = true
malachite-vote.workspace    = true

async-trait        = { workspace = true }
derive-where       = { workspace = true }
libp2p             = { workspace = true }
ractor             = { workspace = true, features = ["async-trait"] }
rand               = { workspace = true }
tokio              = { workspace = true, features = ["full"] }
tracing            = { workspace = true }

[dev-dependencies]
malachite-test     = { workspace = true }
rand_chacha        = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }

