[package]
name                 = "malachite-gossip-consensus"
version.workspace    = true
edition.workspace    = true
repository.workspace = true
license.workspace    = true
publish.workspace    = true

[lints]
workspace = true

[dependencies]
futures            = { workspace = true }
libp2p             = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
