[package]
name        = "malachite-itf"
description = "Library for working with ITF traces for the Malachite consensus engine"

version.workspace      = true
edition.workspace      = true
repository.workspace   = true
license.workspace      = true
publish.workspace      = true
rust-version.workspace = true

[dependencies]
malachite-common = { version = "0.1.0", path = "../common" }
malachite-vote   = { version = "0.1.0", path = "../vote" }
malachite-round  = { version = "0.1.0", path = "../round" }
malachite-test   = { version = "0.1.0", path = "../test" }

itf               = { workspace = true }
rand              = { workspace = true }
num-bigint        = { workspace = true, features = ["serde"] }
num-traits        = { workspace = true }
serde             = { workspace = true, features = ["derive"] }
serde_json        = { workspace = true }
serde_with        = { workspace = true }
glob              = { workspace = true }
pretty_assertions = { workspace = true }

[dev-dependencies]
tempfile         = { version = "3.8.1" }
