[package]
name                 = "malachite-network"
version.workspace    = true
edition.workspace    = true
repository.workspace = true
license.workspace    = true
publish.workspace    = true

[lints]
workspace = true

[dependencies]
malachite-proto.workspace  = true

prost       = { workspace = true }
prost-types = { workspace = true }
serde       = { workspace = true, features = ["derive"] }
