[package]
name        = "malachite-test"
description = "Testing framework for the Malachite consensus engine"
publish     = false

version.workspace      = true
edition.workspace      = true
repository.workspace   = true
license.workspace      = true
rust-version.workspace = true

[dependencies]
malachite-common.workspace = true
malachite-driver.workspace = true
malachite-round.workspace  = true
malachite-vote.workspace   = true
malachite-proto.workspace  = true

futures                     = { workspace = true, features = ["executor"] }
ed25519-consensus.workspace = true
signature.workspace         = true
rand.workspace              = true
sha2.workspace              = true
