[package]
name        = "malachite-vote"
description = "Voting system for the Malachite consensus engine"

version.workspace      = true
edition.workspace      = true
repository.workspace   = true
license.workspace      = true
publish.workspace      = true

[dependencies]
malachite-common = { version = "0.1.0", path = "../common" }

derive-where.workspace = true
