[package]
name                 = "malachite-actors"
version.workspace    = true
edition.workspace    = true
repository.workspace = true
license.workspace    = true
publish.workspace    = true

[lints]
workspace = true

[dependencies]
malachite-common.workspace           = true
malachite-config.workspace           = true
malachite-blocksync.workspace        = true
malachite-consensus.workspace        = true
malachite-gossip-consensus.workspace = true
malachite-gossip-mempool.workspace   = true
malachite-metrics.workspace          = true

async-trait        = { workspace = true }
bytes              = { workspace = true, features = ["serde"] }
derive-where       = { workspace = true }
eyre               = { workspace = true }
libp2p             = { workspace = true }
ractor             = { workspace = true, features = ["async-trait"] }
rand               = { workspace = true }
tokio              = { workspace = true, features = ["full"] }
tracing            = { workspace = true }
