[package]
name = "malachite-app-channel"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
bytes.workspace = true
derive-where.workspace = true
eyre.workspace = true
ractor.workspace = true
tokio.workspace = true
tracing.workspace = true

malachite-app.workspace = true
malachite-actors.workspace = true

[lints]
workspace = true

[dev-dependencies]
malachite-test.workspace = true
rand.workspace = true
