[package]
name = "malachite-app"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
malachite-engine.workspace = true
malachite-codec.workspace = true
malachite-core-types.workspace = true
malachite-config.workspace = true
malachite-core-consensus.workspace = true
malachite-network.workspace = true
malachite-metrics.workspace = true
malachite-peer.workspace = true
malachite-sync.workspace = true

async-trait = { workspace = true }
derive-where = { workspace = true }
eyre = { workspace = true }
libp2p-identity = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
