[package]
name = "informalsystems-malachitebft-app"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
malachitebft-engine.workspace = true
malachitebft-codec.workspace = true
malachitebft-core-types.workspace = true
malachitebft-config.workspace = true
malachitebft-core-consensus.workspace = true
malachitebft-network.workspace = true
malachitebft-metrics.workspace = true
malachitebft-peer.workspace = true
malachitebft-sync.workspace = true

async-trait = { workspace = true }
derive-where = { workspace = true }
eyre = { workspace = true }
libp2p-identity = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
