[package]
name = "informalsystems-malachitebft-app"
description = "High-level interface for building applications on top of the Malachite BFT consensus engine"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
readme = "../../../README.md"

[package.metadata.docs.rs]
all-features = true

[features]
borsh = ["malachitebft-core-consensus/borsh"]

[dependencies]
malachitebft-codec.workspace = true
malachitebft-config.workspace = true
malachitebft-core-consensus.workspace = true
malachitebft-core-types.workspace = true
malachitebft-engine.workspace = true
malachitebft-metrics.workspace = true
malachitebft-network.workspace = true
malachitebft-peer.workspace = true
malachitebft-sync.workspace = true
malachitebft-wal.workspace = true

async-trait = { workspace = true }
derive-where = { workspace = true }
eyre = { workspace = true }
libp2p-identity = { workspace = true }
ractor = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
